--- a/json-server-version/index.html
+++ b/json-server-version/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,9 +10,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 
-   
+
     <link rel="stylesheet" href="./style/index.css">
 </head>
+
 <body>
     <nav class="navbar navbar-expand-sm bg-dark">
         <div id="painel" class="container-fluid">
@@ -23,19 +25,25 @@
                     <a class="nav-link text-info" href="./biblioteca.html" target="mainFrame">Biblioteca</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-info" href="./cadastrarJogo.html" target="mainFrame">Cadastrar Jogo</a>
+                    <a id="liCadastroJogo" class="nav-link text-info esconder" href="./cadastrarJogo.html" target="mainFrame">Cadastrar Jogo</a>
                 </li>
-                <li class="nav-item">
+            </ul>
+            <ul class="navbar navbar-expand-sm bg-dark">
+                <li id="liLogin" class="nav-item">
                     <a class="nav-link text-info" href="./login.html" target="mainFrame">Login</a>
                 </li>
-                <li class="nav-item">
+                <li id="liUsuario" class="nav-item esconder">
                     <a id="aUser" class="nav-link text-info" href="./login.html" target="mainFrame">Usuario</a>
+                </li>
+                <li id="liLogout" class="nav-item esconder">
+                    <button onclick="logout()" class="nav-link text-info bg-dark btLogout">Logout</button>
                 </li>
             </ul>
         </div>
     </nav>
 
-    <iframe class="mainFrame" name="mainFrame" src="home.html" frameborder="0"></iframe>
+    <iframe id="mainFrame" class="mainFrame" name="mainFrame" src="home.html" frameborder="0"></iframe>
     <script src="script/index.js"></script>
 </body>
+
 </html>
