--- a/json-server-version/biblioteca.html
+++ b/json-server-version/biblioteca.html
@@ -6,11 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="./style/bilioteca.css">
-   
-
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    
+    <link rel="stylesheet" href="./style/bilioteca.css">
+
 
     <title>Bilioteca De Jogos</title>
 </head>
@@ -18,16 +18,7 @@
 <body>
     <nav class="navbar navbar-expand-sm bg2 fixed-top">
         <div class="container-fluid">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link text-info" href="#RPG" target="mainFrame">RPG</a>
-                </li class="nav-item">
-                <li>
-                    <a class="nav-link text-info" href="#ACAO" target="mainFrame">AÇÃO</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-info" href="#TIRO" target="mainFrame">TIRO</a>
-                </li>
+            <ul id="ulBilioteca" class="navbar-nav">
             </ul>
         </div>
     </nav>
