--- a/json-server-version/cadastrarJogo.html
+++ b/json-server-version/cadastrarJogo.html
@@ -6,10 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastrar Jogo</title>
 
-    <script src="script/cadastroJogo.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+
+
+    <link rel="stylesheet" href="style/cadastrarJogo.css">
+    <script src="script/cadastrarJogo.js"></script>
+    
 </head>
 <body>
-    <div>
+    <div class="cadastro bg-dark">
         <label>Nome: </label>
         <input id="nome" type="text">
         <label>Genero Principal:</label>
