--- a/json-server-version/login.html
+++ b/json-server-version/login.html
@@ -12,12 +12,14 @@
 <body>
     <div id="login" class="login">
         <div class="itensLogin">
-            <label>Nome de Usuario: </label>
+            <label>Nome de Usuário: </label>
             <input type="text" id="user">
             <label>Senha: </label>
             <input type="text" id="pass">
             <div>
-                <button onclick="logar()">Logar</button><button onclick="cadastrar()">Cadastrar</button>
+                <button onclick="logar()">Logar</button>
+                <!-- <button onclick="cadastrar()">Cadastrar</button> -->
+                <a href="cadastroUsuario.html">Cadastrar</a>
             </div>
         </div>
         <div class="divImg">
