Cadastro contas sendo finalizado

--- a/json-server-version/cadastroUsuario.html
+++ b/json-server-version/cadastroUsuario.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,19 +10,22 @@
 
     <title>Cadastro Usuario</title>
 </head>
+
 <body>
     <div class="cadastro">
         <div class="itensCadastro">
 
-        
-        <label>Nome de Usuário:</label>
-        <input type="text">
-        <label>Senha:</label>
-        <input type="password">
-        <div>
-            <button>Cadastro</button>
+
+            <label>Nome de Usuário:</label>
+            <input id="login" type="text">
+            <label>Senha:</label>
+            <input id="senha" type="password">
+            <div>
+                <button onclick="cadastrarConta()">Cadastro</button>
+            </div>
         </div>
     </div>
-</div>
+    <script src="script/cadastrarConta.js"></script>
 </body>
+
 </html>
