--- a/json-server-version/index.html
+++ b/json-server-version/index.html
@@ -42,7 +42,7 @@
                 <li id="liLogout" class="nav-item esconder">
 
                 </li>
-                <li id="liUsuario" class="nav-item dropdown">
+                <li id="liUsuario" class="nav-item dropdown esconder">
                     <a id="aUser" class="nav-link dropdown-toggle text-info" href="#">Usuario</a>
                     <ul class="dropdown-menu bg-dark configDM">
                         <li><button onclick="logout()" class="dropdown-item text-info bg-dark btLogout">Perfil</button></li>
