--- a/json-server-version/login.html
+++ b/json-server-version/login.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,15 +8,16 @@
     <title>Login</title>
 
     <link rel="stylesheet" href="style/login.css">
-    
+
 </head>
+
 <body>
     <div id="login" class="login">
         <div class="itensLogin">
             <label>Nome de Usuário: </label>
             <input type="text" id="user">
             <label>Senha: </label>
-            <input type="text" id="pass">
+            <input type="password" id="pass">
             <div>
                 <button onclick="logar()">Logar</button>
                 <!-- <button onclick="cadastrar()">Cadastrar</button> -->
@@ -28,4 +30,5 @@
     </div>
 </body>
 <script src="script/login.js"></script>
+
 </html>
