--- a/json-server-version/index.html
+++ b/json-server-version/index.html
@@ -45,7 +45,7 @@
                 <li id="liUsuario" class="nav-item dropdown esconder">
                     <a id="aUser" class="nav-link dropdown-toggle text-info" href="#">Usuario</a>
                     <ul class="dropdown-menu bg-dark configDM">
-                        <li><button onclick="logout()" class="dropdown-item text-info bg-dark btLogout">Perfil</button></li>
+                        <li><a class="dropdown-item text-info bg-dark btLogout" href="perfil.html" target="mainFrame">Perfil</a></li>
                         <li><button onclick="logout()" class="dropdown-item text-info bg-dark btLogout">Logout</button></li>
                     </ul>
                 </li>
