--- a/json-server-version/bibliotecaSteam.html
+++ b/json-server-version/bibliotecaSteam.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 
-    <link rel="stylesheet" href="./style/bilioteca.css">
+    <link rel="stylesheet" href="./style/biliotecaSteam.css">
 
 
     <title>Bilioteca De Jogos</title>
@@ -23,9 +23,10 @@
         </div>
     </nav>
     <div id="mural" class="bg1">
-
+        <div id="jogos" class="bg1 banners ">
+        </div>
     </div>
-    <script src="script/bibliotecaSteam.js"></script>
+    <script src="script/bibliotecaSteam.js "></script>
 </body>
 
 </html>
