--- a/json-server-version/perfilJogo.html
+++ b/json-server-version/perfilJogo.html
@@ -6,11 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jogo</title>
 
+    <link rel="stylesheet" href="style/perfiljogo.css">
+
 </head>
 
 <body>
-    <div>
-        <img id="imgMain" src="" alt="">
+    <div class="mainDiv">
+        <img class="imgJogo" id="imgMain" src="" alt="">
+        <div class="conteudoMD">
+            <h1 class="gameName" id="nomeJogo"></h1>
+            <p id="textoJogo"></p>
+            <p id="generos"></p>
+        </div>
     </div>
 </body>
 <script src="script/perfilJogo.js"></script>
