--- a/json-server-version/perfilJogo.html
+++ b/json-server-version/perfilJogo.html
@@ -14,8 +14,8 @@
     <div class="mainDiv">
         <img class="imgJogo" id="imgMain" src="" alt="">
         <div class="conteudoMD">
-            <h1 class="gameName" id="nomeJogo"></h1>
-            <p id="textoJogo"></p>
+            <h1 class="nomeJogo" id="nomeJogo"></h1>
+            <p id="descricaoJogo"></p>
             <p id="generos"></p>
         </div>
     </div>
