--- a/json-server-version/perfil.html
+++ b/json-server-version/perfil.html
@@ -14,6 +14,7 @@
         <img id="imgPerfil" src="">
         <div id="infoPerfil">
             <p class="infoPerfil" id="nomeUsuario">Usuario</p>
+            <p class="text-info">Status</p>
         </div>
 
     </div>
