Aprimorado pagina perfil do usuario.

--- a/json-server-version/perfil.html
+++ b/json-server-version/perfil.html
@@ -11,12 +11,18 @@
 
 <body>
     <div id="divPerfil">
-        <img id="imgPerfil" src="">
-        <div id="infoPerfil">
-            <p class="infoPerfil" id="nomeUsuario">Usuario</p>
-            <p class="text-info">Status</p>
+        <div class="headPerfil">
+            <img id="imgPerfil" src="">
+            <div id="infoPerfil">
+                <p class="infoPerfil" id="nomeUsuario"></p>
+                <p class="text-info" id="textoStatus"></p>
+            </div>
         </div>
-
+        <div id="infoUsuario">
+            <p class="defText" id="genero"></p>
+            <p class="defText" id="nascimento"></p>
+            <p class="defText" id="dataCriada"></p>
+        </div>
     </div>
 </body>
 <script src="script/perfil.js"></script>
